2006-06-01  Quentin H. Spencer <qspencer@ieee.org>

	* audio/wavread.m: Fix file range error and add read support for
	24-bit WAV files.

2006-06-01  David Bateman  <dbateman@free.fr>

	* general/interpft.m, general/quadl.m, general/polyarea.m,
	general/interp1.m, general/gradient.m, general/interp2.m,
	general/bicubic.m, miscellaneous/inputname.m, plot/__plt3__.m,
	plot/ndgrid.m, plot/plot3.m, polynomial/pchip.m, sparse/pcg.m,
	sparse/pcr.m, strings/mat2str.m: New files from Octave Forge.

2006-05-31  Bill Denney  <bill@givebillmoney.com>

 	* miscellaneous/fileparts.m, miscellaneous/fullfile.m: Add seealso.
 	* miscellaneous/texas_lotto.m: Fix warning message.

2006-05-26  John W. Eaton  <jwe@octave.org>

	* miscellaneous/doc.m: Also handle nargin == 0.

2006-05-23  John W. Eaton  <jwe@octave.org>

	* plot/mesh.m: Use __gnupot_raw__ except where __gnuplot_set__ is
	really needed.

2006-05-22  John W. Eaton  <jwe@octave.org>

	* scripts/general/lookup.m: New file from Octave Forge.

2006-05-22  David Bateman  <dbateman@free.fr>

	* scripts/general/nthroot.m, scripts/linear-algebra/rref.m,
	scripts/specfun/isprime.m, scripts/specfun/primes.m,
	scripts/specfun/factor.m, scripts/specfun/nchoosek.m,
	scripts/specfun/legendre.m, scripts/specfun/perms.m,
	scripts/special-matrix/rosser.m,
	scripts/special-matrix/wilkinson.m,
	scripts/special-matrix/pascal.m, scripts/special-matrix/magic.m,
	scripts/special-matrix/hadamard.m, scripts/strings/strtok.m:
	New files from Octave Forge.

2006-05-19  David Bateman  <dbateman@free.fr>

	* polynomial/unmkpp.m, polynomial/mkpp.m, polynomial/spline.m,
	polynomial/ppval.m, set/setxor.m: New files from Octave Forge.

2006-05-17  John W. Eaton  <jwe@octave.org>

	* set/intersection.m: Delete
	* deprecated/intersection.m: New file.

2006-05-17  David Bateman  <dbateman@free.fr>

	* general/cplxpair.m, general/trapz.m, general/cumtrapz.m,
	general/isdir.m, miscellaneous/dos.m, miscellaneous/getfield.m,